# webrtc-ros-bridge

./: .env.example  .gitignore  compose-build-local.sh  docker-compose.yml
app/: package.json  pnpm-lock.yaml
app-server/: .gitignore  Dockerfile  README.md  RUNNING_TALKER.md  check-ros2.sh  main.py  pyproject.toml  requirements.txt  run-in-docker.sh  run.sh  start-talker.sh
app/src/: App.tsx  main.tsx
frodobots-earth-rovers/: Dockerfile  README.md  browser_service.py  index.html  main.py
frodobots-earth-rovers-sdk/: Dockerfile
frodobots-earth-rovers/static/: basicRtm.js  basicVideoCall.js
ros2-app-bridge/: Dockerfile  README.md  main.py
ros2_ws/: .dockerignore  .env.example  Dockerfile  README_DOCKER.md  docker-compose.yml  requirements.txt
ros2_ws/install/camera_node/share/camera_node/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/frodobots_bridge/share/frodobots_bridge/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/frodobots_bridge/share/frodobots_bridge/launch/: frodobots_bridge.launch.py
ros2_ws/install/sdk_bridge_core/share/sdk_bridge_core/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/sdk_bridge_core/share/sdk_bridge_core/interfaces/srv/: ControlCommand.srv
ros2_ws/install/sdk_bridge_core/share/sdk_bridge_core/launch/: bridge_service.launch.py
ros2_ws/log/: latest_build
ros2_ws/scripts/: docker-build-workspace.sh  docker-build.sh  docker-clean.sh  docker-logs.sh  docker-run.sh  docker-shell.sh  validate-all.sh  validate-build.sh  validate-packages.sh  validate-talker-listener.sh  validate.sh
ros2_ws/src/camera_node/: package.xml  requirements-webrtc.txt  setup.py
ros2_ws/src/camera_node/camera_node/: __init__.py  camera_node_publisher.py  webrtc_source.py
ros2_ws/src/camera_node/launch/: camera_node.launch.py
ros2_ws/src/frodobots_bridge/: package.xml  setup.cfg  setup.py
ros2_ws/src/frodobots_bridge/config/: frodobots_config.yaml
ros2_ws/src/frodobots_bridge/frodobots_bridge/: frodobots_adapter.py  http_control.py
ros2_ws/src/frodobots_bridge/launch/: occupancy_system.launch.py
ros2_ws/src/mono_nav_perception/: package.xml  setup.cfg
ros2_ws/src/mono_nav_perception/mono_nav_perception/: __init__.py  depth_to_occupancy_node.py
ros2_ws/src/occupancy_grid/: package.xml  setup.py
ros2_ws/src/occupancy_grid/launch/: occupancy_node.launch.py
ros2_ws/src/occupancy_grid/occupancy_grid/: __init__.py  occupancy_node.py
ros2_ws/src/sdk_bridge_core/: package.xml  setup.cfg  setup.py
ros2_ws/src/sdk_bridge_core/sdk_bridge_core/base/: sdk_bridge_base.py
ros2_ws/src/sdk_bridge_core/sdk_bridge_core/service/: bridge_service.py
ros2_ws/src/sdk_bridge_core/sdk_bridge_core/webrtc/: __init__.py  track_mapper.py  webrtc_receiver.py
ros2_ws/src/sdk_bridge_core_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/sdk_bridge_core_interfaces/msg/: StreamTelemetry.msg
ros2_ws/src/slam_occupancy/: package.xml  setup.py
ros2_ws/src/slam_occupancy/slam_occupancy/: __init__.py  slam_occupancy_node.py
ros2_ws/src/slam_pose_relay/: package.xml  setup.cfg  setup.py
ros2_ws/src/slam_pose_relay/slam_pose_relay/: __init__.py  slam_pose_relay_node.py
ros2_ws/src/wander_planning/: package.xml  setup.py
ros2_ws/src/wander_planning/wander_planning/: frontier_node.py  wander_node.py
slam/: Dockerfile  README.md  entrypoint.sh  pose_remap.py  tracked_image_passthrough.py
slam/params/: mono-bridge-params.yaml
