<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>slam_occupancy</name>
  <version>0.1.0</version>
  <description>Build 2D occupancy grid from ORB-SLAM3 map points: ground plane RANSAC, obstacles above plane.</description>
  <maintainer email="user@example.com">dgx-ros2</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
